test/occurs-check.ktn
def f (int int -> int) {
  (+)
}

def g (-> int) {
  { 1 f } h
}

def h ((-> int) -> int) {
  apply
}
